--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
   <div class="wrapper">
-    <div class="box a">A</div>
+    <div class="triangle"></div>
+    <div class="box a">
+      <div class="item-a">
+        A
+      </div>
+    </div>
     <div class="box b">B</div>
     <div class="box c">C</div>
     <div class="box d">D</div>
